# PraktikumEV

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  Doxyfile  Makefile  README.md  SimpleLanczos  cmake_install.cmake
doc/html/: _lanczos_8hh.html  _lanczos_8hh.js  _lanczos_8hh_source.html  annotated.html  annotated_dup.js  classes.html  dir_00a6331253ee4889ff010e845e4c644a.html  dir_00a6331253ee4889ff010e845e4c644a.js  dir_0fb8ff73f65124c881cafe8a5a31c312.html  dir_0fb8ff73f65124c881cafe8a5a31c312.js  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2.html  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2.js  dir_5da98e625227ca21a74f7c2f72cdf82b.html  dir_5da98e625227ca21a74f7c2f72cdf82b.js  dir_8ae4cef8e1291e6ff629c505d50b3359.html  dir_8ae4cef8e1291e6ff629c505d50b3359.js  dir_af6c992704a996852a747fae7957011e.html  dir_af6c992704a996852a747fae7957011e.js  dir_c9b133385bf420c1405b29ac31be1f37.html  dir_c9b133385bf420c1405b29ac31be1f37.js  dir_d4b8a941c74c0bc7908b6e515d70b650.html  dir_d4b8a941c74c0bc7908b6e515d70b650.js  dir_eaa343e0b6bb069d0130185ed006e21c.html  dir_eaa343e0b6bb069d0130185ed006e21c.js  dummy2_8cc.html  dummy2_8cc.js  dummy2_8cc_source.html  dummy_8cc.html  dummy_8cc_source.html  dummy_8h.html  dummy_8h.js  dummy_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.html  (+8 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
gtests/: CMakeLists.txt  Makefile  cmake_install.cmake  create_laplace_matrix.hh  create_matrix.cc  create_matrix.hh  eigen_base.cc  gtest_create_laplace_matrix.cc  gtest_eigen.cc  gtest_eigenvec  gtest_eigenvec.cc  gtest_givens.cc  gtest_helpfunctions.cc  gtest_helpfunctions.hh  gtest_ir_lanczos.cc  gtest_lanczos.cc  gtest_lanczos_basics.cc  gtest_main.cc  gtest_print_lanczos.cc  gtest_qr_ev_solver.cc  gtest_simple_lanczos.cc  gtest_tests.cc  gtest_tridiag_ev_solver.cc  gtests.g[1]_include.cmake  gtests[1]_include.cmake  instructions.txt
include/: Lanczos.hh  Lanczos_saad.hh  dummy.h  helpfunctions.hh  laurasmain.cc  main.cc  standard_include.hh  tridiag_ev_solver.backup  tridiag_ev_solver.hh
report/: report.tex  theory.tex
source/: dummy2.cc  helpfunctions.cc
